--- a/CSS/InicioSesion.css
+++ b/CSS/InicioSesion.css
@@ -56,6 +56,7 @@ body {
 }
 
 button[type="submit"] {
+    font-weight: 500;
     background-color: #0014cd;
     color: white;
     padding: 10px 20px;
