--- a/CSS/InicioSesion.css
+++ b/CSS/InicioSesion.css
@@ -1,15 +1,26 @@
 /* Estilo general */
 body {
+    background-image: url("../IMG/pattern.svg");
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
-    margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    margin-left: 20px;
+    margin-right: 20px;
     height: 100vh;
 }
 
-#log_Container {
+.logo {
+    width: 250px;
+    height: auto;
+    margin-bottom: 40px;
+}
+
+.log_Container {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
@@ -80,26 +91,26 @@ button[type="submit"] a{
 /* Estilos responsivos */
 /* Móviles (por defecto) */
 @media (max-width: 767px) {
-    #log_Container {
+    .log_Container {
         margin: 20px;
         padding: 20px;
     }
 
     .control, button[type="submit"] {
-        font-size: 1rem;
+        font-size: 1.2rem;
         padding: 10px;
     }
 }
 
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1023px) {
-    #log_Container {
-        width: 70%;
+    .log_Container {
+        width: 50%;
         padding: 30px;
     }
 
     .control, button[type="submit"] {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         padding: 12px;
     }
 
@@ -111,7 +122,7 @@ button[type="submit"] a{
 
 /* Ordenadores */
 @media (min-width: 1024px) {
-    #log_Container {
+    .log_Container {
         width: 50%;
         padding: 40px;
     }
