--- a/CSS/AltaTrabajo.css
+++ b/CSS/AltaTrabajo.css
@@ -24,6 +24,10 @@ h1 {
     text-align: center;
 }
 
+.nombreUsuario {
+    color: rgb(255, 0, 0);
+}
+
 /* Estilo del formulario */
 form {
     display: flex;
@@ -93,6 +97,18 @@ button.enviar {
 
 button.enviar:hover {
     background-color: #000b69; /* Color más oscuro al hacer hover */
+}
+
+button.cerrarSesion {
+    font-size: 15px;
+    margin-top: 20px;
+    max-width: 175px;
+    background-color: rgb(160, 0, 0);
+    color: white;
+}
+
+button.cerrarSesion:hover {
+    background-color: rgb(90, 0, 0);
 }
 
 .modal {
