--- a/registro/includes/css/alta_trabajo.css
+++ b/registro/includes/css/alta_trabajo.css
@@ -64,31 +64,26 @@ select:focus, input[type="time"]:focus, textarea:focus {
     outline: none;
 }
 
-.horaEntrada::before {
+.horaEntrada:invalid::before {
     content: 'Hora Entrada'; /* Color similar al placeholder */
 }
 
-.horaSalida::before {
+.horaSalida:invalid::before {
     content: 'Hora Salida';
 }
 
-input[type="time"]::before {
+input[type="time"]:invalid::before {
     color: #9d9d9d;
     font-family: 'Roboto', Arial, sans-serif;
     position: absolute;
     background: #fff;
-    opacity: 1; /* Valor inicial */
-    transition: all 0.3s ease; /* Transición suave de 0.3 segundos */
     pointer-events: none; /* Evita que interfiera con el input */
     padding-left: 5px;
     padding-top: 2px;
 }
 
 input[input="time"]:focus::before {
-    opacity: 0;
-}
-
-input[type="time"]:hover::before {
+    width: 0;
     content: '';
 }
 
